- Integration test behavior of clicking keypad to score a value - sketch out logic, aim to refactor

--- a/style.css
+++ b/style.css
@@ -40,6 +40,8 @@ a {
 }
 .calculator ul li {
   float:left;
-  width:100px;
+  width:90px;
   height:50px;
+  border-right:1px solid;
+  border-bottom:1px solid;
 }
