--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ html {
 body {
     margin: 0;
     font-size: 16px;
+    font-family: 'Lato', serif;
+    background-image: url(http://subtlepatterns.com/patterns/tweed.png); background-position: initial initial; background-repeat: initial initial;
 }
 h1,
 h2,
@@ -25,23 +27,48 @@ li {
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
-    -webkit-transition: .3s;
-    -moz-transition: .3s;
-    transition: .3s;
+  text-decoration: none;
+  color: inherit;
+  -webkit-transition: .3s;
+  -moz-transition: .3s;
+  transition: .3s;
 }
 
 .calculator {
   margin:0 auto;
-  max-width:400px;
+  padding:20px;
+  margin-top:40px;
+  width:250px;
+  color:#fff;
+  font-weight:bold;
   border: 1px solid;
   overflow:hidden;
+  background:rgba(43, 43, 43,.99);
+  border-radius:10px;
+}
+
+.calculator input {
+  width:95%; 
+  background:none;
+  border:none;
+  color:#fff;
+  text-align:right;
+  padding:10px;
+  font-size:2em;
+}
+
+.calculator ul {
 }
 .calculator ul li {
   float:left;
-  width:90px;
+  width:60px;
   height:50px;
-  border-right:1px solid;
-  border-bottom:1px solid;
+  margin:1px;
+  line-height:3;
+  text-align:center;
+  border-radius:5px;
+}
+
+.calculator ul li:hover {
+  background:red;
 }
